# Sudoku-game

./: CMakeLists.txt
src/: CMakeLists.txt  Doxyfile  main.cpp  sudoku.cpp  sudoku.h  sudoku_tests.cpp
src/doxygen/html/: doxygen_crawl.html  files.html  index.html  sudoku_8h_source.html
src/doxygen/latex/: files.tex  refman.tex  sudoku_8h_source.tex
src/maps/: mapE2.txt  mapE3.txt  mapH1.txt  mapH2.txt  mapH3.txt  mapN1.txt  mapN2.txt  mapN3.txt
src/saves/: best_try.txt  save1.txt  save2.txt
